--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,4 +16,10 @@
 <div class="container">
   <h1>{{title}}</h1>
   <router-outlet></router-outlet>
+
+  <footer class="footer">
+    <div class="container">
+      <a class="text-muted" routerLink="admin">Admin</a>
+    </div>
+  </footer>
 </div>
