--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,3 +1,10 @@
-<p>
-  project-detail works!
-</p>
+<div class="container">
+  <h3>{{projectToDisplay.name}}</h3>
+  <h4>By {{projectToDisplay.starters}}</h4>
+  <h5>Here is more information about {{projectToDisplay.name}}</h5>
+  <p>{{projectToDisplay.description}} <br>
+  Our goal is to reach $ {{projectToDisplay.goal}} <br>
+  When we reach our goal we will {{projectToDisplay.plans}} <br>
+  If you donate you are entered into winning {{projectToDisplay.rewards}}
+  </p>
+</div>
