make amountRaised property in Project class a private var

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
   <footer class="footer">
     <div class="container">
-      <a class="text-muted" routerLink="admin">Admin</a>
+      <a class="text-muted" routerLink="admin">Add a new Project</a>
     </div>
   </footer>
 </div>
